chore: linting
refs: OJ-3836